<?xml version="1.0"?>
<package>
  <name>octomap_pa</name>
  <version>1.0.0</version>
  <description>The proaut octomap package</description>
  <maintainer email="wepet@hrz.tu-chemnitz.de">wepet</maintainer>
  <license>other</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap_msgs</build_depend>

  <build_depend>parameter_pa</build_depend>

  <!-- Additional dependencies needed to compile this package. -->
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>octomap</build_depend>



  <run_depend>roscpp</run_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>tf</run_depend>
  <run_depend>laser_geometry</run_depend>

  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <run_depend>octomap_ros</run_depend>
  <run_depend>octomap_msgs</run_depend>

  <run_depend>parameter_pa</run_depend>

  <!-- Additional dependencies needed to compile this package. -->
  <run_depend>libpcl-all</run_depend>
  <run_depend>octomap</run_depend>

</package>
