<?xml version="1.0"?>
<package format="2">
    <name>octomap_pa_msgs</name>
    <version>1.3.3</version>
    <description>ProAut octomap package (only messages)</description>
    <maintainer email="wepet@hrz.tu-chemnitz.de">Peter Weissig</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>


    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>

    <build_depend>message_generation</build_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>message_runtime</exec_depend>


    <doc_depend>doxygen</doc_depend>
    <doc_depend>sensor_msgs</doc_depend>

</package>
